--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,9 +13,21 @@
            <input type="text">
            <div class="selection">
                <div class="selection-one">
-                    <select name="" id="">
-                        <option value=""></option>
-                        
+                   <label for="from">FROM:</label>
+                    <select name="from" id="" required>
+                        <option value="">p</option>
+                        <option value="">o</option>
+                        <option value="">k</option>
+                        <option value="">h</option>
+                    </select>
+               </div>
+               <div class="selection-two" required>
+                   <label for="TO">TO:</label>
+                    <select name="To" id="">
+                        <option value="">j</option>
+                        <option value="">kop</option>
+                        <option value="">k</option>
+                        <option value="">u</option>
                     </select>
                </div>
            </div>
